fix: Fixed sidebar overflow

--- a/src/app/components/layout/styles.module.scss
+++ b/src/app/components/layout/styles.module.scss
@@ -114,6 +114,7 @@ $sidebar-collapsed: 60px;
 
 .navItem {
     all: unset;
+    box-sizing: border-box;
     display: flex;
     align-items: center;
     width: 100%;
